.k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nosi-fusion-innovation-promptfoo
  labels:
    image: private
