.k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-promptfoo
  namespace: nosi-fusion-innovation-promptfoo
spec:
  selector:
    matchLabels:
      app: app-promptfoo
  template:
    metadata:
      labels:
        app: app-promptfoo
    spec:
      imagePullSecrets:
        - name: docker-nosinovacao
      containers:
        - name: app-promptfoo
          image: europe-west4-docker.pkg.dev/nos-ddplab-d-269916/docker-repo/ri-promptfoo:0.0.3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
          volumeMounts:
            - name: promptfoo-pvc
              mountPath: /home/promptfoo/.promptfoo
      volumes:
        - name: promptfoo-pvc
          persistentVolumeClaim:
            claimName: promptfoo-pvc
