.k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promptfoo-service
  namespace: nosi-fusion-innovation-promptfoo
spec:
  selector:
    app: app-promptfoo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
