.k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promptfoo-ingress
  namespace: nosi-fusion-innovation-promptfoo
  annotations:
    external-dns.alpha.kubernetes.io/target: 34.120.174.126
    cert-manager.io/cluster-issuer: letsencrypt-prod-nosinovacao
    # nginx.ingress.kubernetes.io/proxy-body-size: "200m" 
spec:
  ingressClassName: nginx
  rules:
  - host: nosi-promptfoo.apps.nosinovacao.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: promptfoo-service
            port:
              number: 3000
  tls:
  - hosts:
    - nosi-promptfoo.apps.nosinovacao.pt
    secretName: nosi-promptfoo-tls
